[project]
name = "security"
version = "0.1.0"
description = "Materials for the course"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "scipy",
    "matplotlib",
    "pycryptodomex",
]

# Optional lesson environments
[project.optional-dependencies]

notebook = [
    "jupyterlab",
    "ipykernel",
    "ipympl",
]

dev = [
    "black",
    "ruff",
    "pytest"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"